@@ -82,6 +82,11 @@ public class WebResource {
     }
 
 
+    public void suppressAutomaticContentTypeHeader() {
+        _hasExplicitContentTypeHeader = true;
+    }
+    
+
     public WebResource( String contents, int responseCode ) {
         this( contents, DEFAULT_CONTENT_TYPE, responseCode );
     }
