@@ -14,6 +14,12 @@ Limitations:
 
 
 Revision History:
+31-Mar-2006:
+    Additions:
+        PseudoServer:
+            1. Added WebResource.suppressAutomaticContentTypeHeader to permit generation of responses without the
+               Content-Type header.
+               
 28-Mar-2006:
     Notes:
         1. The build now uses the ant-dependencies task (see http://www.httpunit.org/doc/dependencies.html) rather than
